@@ -1,5 +1,5 @@
 /*
- * (C) Copyright 2006-2020 Nuxeo (http://nuxeo.com/) and others.
+ * (C) Copyright 2006-2024 Nuxeo (http://nuxeo.com/) and others.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,7 +17,6 @@
  *     Thomas Roger <troger@nuxeo.com>
  *     Mincong Huang <mhuang@nuxeo.com>
  */
-
 package org.nuxeo.ecm.automation.core.test.directory;
 
 import static java.nio.charset.StandardCharsets.UTF_8;
@@ -31,12 +30,12 @@ import static org.junit.Assert.fail;
 import java.io.File;
 import java.io.IOException;
 import java.io.Serializable;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 
-import javax.inject.Inject;
+import jakarta.inject.Inject;
 
 import org.json.JSONException;
 import org.junit.After;
@@ -56,12 +55,12 @@ import org.nuxeo.ecm.automation.core.operations.services.directory.ReadDirectory
 import org.nuxeo.ecm.automation.core.operations.services.directory.SuggestDirectoryEntries;
 import org.nuxeo.ecm.automation.core.operations.services.directory.UpdateDirectoryEntries;
 import org.nuxeo.ecm.automation.core.util.Properties;
+import org.nuxeo.ecm.automation.features.AutomationFeaturesFeature;
 import org.nuxeo.ecm.core.api.Blob;
 import org.nuxeo.ecm.core.api.Blobs;
 import org.nuxeo.ecm.core.api.CoreSession;
 import org.nuxeo.ecm.core.api.DocumentModel;
 import org.nuxeo.ecm.core.api.DocumentModelList;
-import org.nuxeo.ecm.core.test.CoreFeature;
 import org.nuxeo.ecm.core.test.DefaultRepositoryInit;
 import org.nuxeo.ecm.core.test.annotations.RepositoryConfig;
 import org.nuxeo.ecm.directory.DirectoryException;
@@ -80,11 +79,8 @@ import com.fasterxml.jackson.databind.ObjectMapper;
  * @since 5.7
  */
 @RunWith(FeaturesRunner.class)
-@Features({ CoreFeature.class, DirectoryFeature.class })
+@Features({ AutomationFeaturesFeature.class, DirectoryFeature.class })
 @RepositoryConfig(init = DefaultRepositoryInit.class)
-@Deploy("org.nuxeo.ecm.actions")
-@Deploy("org.nuxeo.ecm.automation.core")
-@Deploy("org.nuxeo.ecm.automation.features")
 @Deploy("org.nuxeo.ecm.automation.features:test-directories-sql-contrib.xml")
 public class DirectoryOperationsTest {
 
@@ -122,8 +118,20 @@ public class DirectoryOperationsTest {
 
     @Test
     public void shouldCreateNewEntriesIfAllParamsFilled() throws Exception {
-        String newEntries = "[{\"id\": \"newContinent\", \"label\": \"newLabel\", \"obsolete\": 0},"
-                + "{\"id\": \"anotherContinent\", \"label\": \"anotherLabel\", \"obsolete\": 0}]";
+        String newEntries = """
+                [
+                  {
+                    "id": "newContinent",
+                    "label": "newLabel",
+                    "obsolete": 0
+                  },
+                  {
+                    "id": "anotherContinent",
+                    "label": "anotherLabel",
+                    "obsolete": 0
+                  }
+                ]
+                """;
 
         Map<String, Object> params = new HashMap<>();
         params.put("directoryName", "continent");
@@ -156,8 +164,18 @@ public class DirectoryOperationsTest {
     @Test
     public void shouldCreateNewEntriesIfSomeParamsMissing() throws Exception {
         // Field 'obsolete' is missing on purpose.
-        String newEntries = "[{\"id\": \"newContinent\", \"label\": \"newLabel\"},"
-                + "{\"id\": \"anotherContinent\", \"label\": \"anotherLabel\"}]";
+        String newEntries = """
+                [
+                  {
+                    "id": "newContinent",
+                    "label": "newLabel"
+                  },
+                  {
+                    "id": "anotherContinent",
+                    "label": "anotherLabel"
+                  }
+                ]
+                """;
 
         Map<String, Object> params = new HashMap<>();
         params.put("directoryName", "continent");
@@ -199,13 +217,21 @@ public class DirectoryOperationsTest {
         // assert using method 'Session#query'
         Map<String, Serializable> filter = new HashMap<>();
         filter.put("obsolete", 0L);
-        DocumentModelList docs = directorySession.query(filter, Collections.emptySet(), Collections.emptyMap(), false);
+        DocumentModelList docs = directorySession.query(filter, Set.of(), Map.of(), false);
         assertEquals(9, docs.size());
     }
 
     @Test
-    public void shouldNotCreateNewEntryIFEntryAlreadyExsists() throws Exception {
-        String newEntries = "[{\"id\": \"europe\", \"label\": \"europe\", \"obsolete\": 0}]";
+    public void shouldNotCreateNewEntryIFEntryAlreadyExists() throws Exception {
+        String newEntries = """
+                [
+                  {
+                    "id": "europe",
+                    "label": "europe",
+                    "obsolete": 0
+                  }
+                ]
+                """;
 
         Map<String, Object> params = new HashMap<>();
         params.put("directoryName", "continent");
@@ -281,7 +307,15 @@ public class DirectoryOperationsTest {
     public void shouldUpdateEntries() throws Exception {
         createEntry("entryToUpdate", "entryToUpdateLabel", 0);
 
-        String entriesToUpdate = "[{\"id\": \"entryToUpdate\", \"label\": \"newEntryToUpdateLabel\", \"obsolete\": 0}]";
+        String entriesToUpdate = """
+                [
+                  {
+                    "id": "entryToUpdate",
+                    "label": "newEntryToUpdateLabel",
+                    "obsolete": 0
+                  }
+                ]
+                """;
 
         Map<String, Object> params = new HashMap<>();
         params.put("directoryName", "continent");
@@ -308,7 +342,13 @@ public class DirectoryOperationsTest {
 
     @Test
     public void shouldReadEntries() throws Exception {
-        String entriesToRead = "[\"europe\", \"asia\", \"oceania\"]";
+        String entriesToRead = """
+                [
+                  "europe",
+                  "asia",
+                  "oceania"
+                ]
+                """;
 
         Map<String, Object> params = new HashMap<>();
         params.put("directoryName", "continent");
@@ -393,7 +433,7 @@ public class DirectoryOperationsTest {
         assertEquals(2, children.size());
     }
 
-    /** NXP-28113 */
+    // NXP-28113
     @Test
     @Deploy("org.nuxeo.ecm.automation.features:test-parent-child-directories.xml")
     public void shouldSuggestOnParentChildDirectories() throws Exception {
@@ -405,8 +445,8 @@ public class DirectoryOperationsTest {
         assertJSON("json/shouldSuggestOnParentChildDirectories.json", result);
     }
 
-    /** NXP-28113 */
-    /** NXP-31052 */
+    // NXP-28113
+    // NXP-31052
     @Test
     @Deploy("org.nuxeo.ecm.automation.features:test-parent-child-directories.xml")
     public void shouldSuggestWithParentSelectionOnParentChildDirectories() throws Exception {
@@ -418,7 +458,7 @@ public class DirectoryOperationsTest {
         assertJSON("json/shouldSuggestWithParentSelectionOnParentChildDirectories.json", result);
     }
 
-    /** NXP-31052 */
+    // NXP-31052
     @Test
     @Deploy("org.nuxeo.ecm.automation.features:test-parent-child-directories.xml")
     public void shouldSuggestWithObsoleteOnParentChildDirectories() throws Exception {
@@ -430,7 +470,7 @@ public class DirectoryOperationsTest {
         assertJSON("json/shouldSuggestWithObsoleteOnParentChildDirectories.json", result);
     }
 
-    /** NXP-28113 */
+    // NXP-28113
     @Test
     @Deploy("org.nuxeo.ecm.automation.features:test-parent-child-directories.xml")
     public void shouldFilterSuggestionOnParentChildDirectories() throws Exception {
