@@ -1,5 +1,5 @@
 /*
- * (C) Copyright 2016 Nuxeo SA (http://nuxeo.com/) and others.
+ * (C) Copyright 2016-2025 Nuxeo (http://nuxeo.com/) and others.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -23,21 +23,19 @@ import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertNull;
 import static org.junit.Assert.assertTrue;
-import static org.junit.Assume.assumeTrue;
 import static org.nuxeo.drive.service.NuxeoDriveEvents.DELETED_EVENT;
 import static org.nuxeo.drive.service.NuxeoDriveEvents.ROOT_REGISTERED;
 import static org.nuxeo.drive.service.NuxeoDriveEvents.SECURITY_UPDATED_EVENT;
 import static org.nuxeo.ecm.collections.api.CollectionConstants.ADDED_TO_COLLECTION;
 import static org.nuxeo.ecm.core.api.event.DocumentEventTypes.DOCUMENT_CREATED;
 import static org.nuxeo.ecm.core.api.event.DocumentEventTypes.DOCUMENT_UPDATED;
-import static org.nuxeo.ecm.core.api.trash.TrashService.Feature.TRASHED_STATE_IS_DEDUCED_FROM_LIFECYCLE;
 
 import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 
-import javax.inject.Inject;
+import jakarta.inject.Inject;
 
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.logging.log4j.LogManager;
@@ -62,8 +60,10 @@ import org.nuxeo.ecm.core.api.security.SecurityConstants;
 import org.nuxeo.ecm.core.api.trash.TrashService;
 import org.nuxeo.ecm.core.api.versioning.VersioningService;
 import org.nuxeo.ecm.core.blob.ManagedBlob;
+import org.nuxeo.ecm.core.storage.dbs.IgnoreIfNotDBSRepository;
 import org.nuxeo.ecm.platform.usermanager.NuxeoPrincipalImpl;
 import org.nuxeo.runtime.api.Framework;
+import org.nuxeo.runtime.test.runner.ConditionalIgnore;
 import org.nuxeo.runtime.test.runner.Deploy;
 
 /**
@@ -206,15 +206,11 @@ public class AuditChangeFinderTestSuite extends AbstractChangeFinderTestCase {
             expectedChanges.add(new SimpleFileSystemItemChange(folder2.getId(), ROOT_REGISTERED, TEST_REPOSITORY,
                     DEFAULT_SYNC_ROOT_FOLDER_ITEM_FACTORY_PREFIX + folder2.getId()));
             expectedChanges.add(new SimpleFileSystemItemChange(doc3.getId(), "documentMoved", TEST_REPOSITORY));
-            if (trashService.hasFeature(TRASHED_STATE_IS_DEDUCED_FROM_LIFECYCLE)) {
-                expectedChanges.add(
-                        new SimpleFileSystemItemChange(doc1.getId(), "lifecycle_transition_event", TEST_REPOSITORY));
-            } else {
-                expectedChanges.add(new SimpleFileSystemItemChange(doc1.getId(), "documentUntrashed", TEST_REPOSITORY));
-            }
+            expectedChanges.add(new SimpleFileSystemItemChange(doc1.getId(), "documentUntrashed", TEST_REPOSITORY));
+
             assertTrue(CollectionUtils.isEqualCollection(expectedChanges, toSimpleFileSystemItemChanges(changes)));
 
-            log.trace("Physical deletion without triggering the delete transition first");
+            log.trace("Physical deletion");
             session.removeDocument(doc3.getRef());
         } finally {
             commitAndWaitForAsyncCompletion();
@@ -223,8 +219,10 @@ public class AuditChangeFinderTestSuite extends AbstractChangeFinderTestCase {
         try {
             changes = getChanges();
             assertEquals(1, changes.size());
-            assertEquals(new SimpleFileSystemItemChange(doc3.getId(), DELETED_EVENT, TEST_REPOSITORY,
-                    FILE_SYSTEM_ITEM_ID_PREFIX + doc3.getId()), toSimpleFileSystemItemChange(changes.get(0)));
+            assertEquals(
+                    new SimpleFileSystemItemChange(doc3.getId(), DELETED_EVENT, TEST_REPOSITORY,
+                            FILE_SYSTEM_ITEM_ID_PREFIX + doc3.getId()),
+                    toSimpleFileSystemItemChange(changes.getFirst()));
 
             log.trace("Create a doc and copy it from a sync root to another one");
             docToCopy = session.createDocumentModel(FOLDER_1_PATH, "docToCopy", "File");
@@ -256,7 +254,7 @@ public class AuditChangeFinderTestSuite extends AbstractChangeFinderTestCase {
             changes = getChanges();
             assertEquals(1, changes.size());
             assertEquals(new SimpleFileSystemItemChange(doc1.getId(), DELETED_EVENT, TEST_REPOSITORY),
-                    toSimpleFileSystemItemChange(changes.get(0)));
+                    toSimpleFileSystemItemChange(changes.getFirst()));
 
             log.trace("Move a doc from a sync root to another sync root");
             session.move(copiedDoc.getRef(), folder1.getRef(), null);
@@ -268,7 +266,7 @@ public class AuditChangeFinderTestSuite extends AbstractChangeFinderTestCase {
             changes = getChanges();
             assertEquals(1, changes.size());
             assertEquals(new SimpleFileSystemItemChange(copiedDoc.getId(), "documentMoved", TEST_REPOSITORY),
-                    toSimpleFileSystemItemChange(changes.get(0)));
+                    toSimpleFileSystemItemChange(changes.getFirst()));
 
             log.trace("Move a doc from a sync root to a non synchronized folder");
             session.move(copiedDoc.getRef(), folder3.getRef(), null);
@@ -280,7 +278,7 @@ public class AuditChangeFinderTestSuite extends AbstractChangeFinderTestCase {
             changes = getChanges();
             assertEquals(1, changes.size());
             assertEquals(new SimpleFileSystemItemChange(copiedDoc.getId(), DELETED_EVENT, TEST_REPOSITORY),
-                    toSimpleFileSystemItemChange(changes.get(0)));
+                    toSimpleFileSystemItemChange(changes.getFirst()));
 
             log.trace("Create a doc, create a version of it, update doc and restore the version");
             docToVersion = session.createDocumentModel(FOLDER_1_PATH, "docToVersion", "File");
@@ -292,7 +290,7 @@ public class AuditChangeFinderTestSuite extends AbstractChangeFinderTestCase {
             docToVersion = session.saveDocument(docToVersion);
             List<DocumentModel> versions = session.getVersions(docToVersion.getRef());
             assertEquals(1, versions.size());
-            DocumentModel version = versions.get(0);
+            DocumentModel version = versions.getFirst();
             session.restoreToVersion(docToVersion.getRef(), version.getRef());
         } finally {
             commitAndWaitForAsyncCompletion();
@@ -324,6 +322,7 @@ public class AuditChangeFinderTestSuite extends AbstractChangeFinderTestCase {
     }
 
     @Test
+    @SuppressWarnings("deprecation")
     public void testFindSecurityChanges() {
         List<FileSystemItemChange> changes;
         DocumentModel subFolder;
@@ -437,7 +436,7 @@ public class AuditChangeFinderTestSuite extends AbstractChangeFinderTestCase {
             // Expecting 1 change: securityUpdated for subFolder with a non-null FileSystemItem and FileSystemItem name
             // since the user can still access it by inheritance
             assertEquals(1, changes.size());
-            FileSystemItemChange change = changes.get(0);
+            FileSystemItemChange change = changes.getFirst();
             assertEquals(
                     new SimpleFileSystemItemChange(subFolder.getId(), SECURITY_UPDATED_EVENT, TEST_REPOSITORY,
                             DEFAULT_SYNC_ROOT_FOLDER_ITEM_FACTORY_PREFIX + subFolder.getId(), SUB_FOLDER),
@@ -456,7 +455,7 @@ public class AuditChangeFinderTestSuite extends AbstractChangeFinderTestCase {
             // Expecting 1 change: securityUpdated for subFolder with a null FileSystemItem and FileSystemItem name
             // since the user cannot access it anymore
             assertEquals(1, changes.size());
-            FileSystemItemChange change = changes.get(0);
+            FileSystemItemChange change = changes.getFirst();
             assertEquals(
                     new SimpleFileSystemItemChange(subFolder.getId(), SECURITY_UPDATED_EVENT, TEST_REPOSITORY,
                             FILE_SYSTEM_ITEM_ID_PREFIX + subFolder.getId(), SUB_FOLDER),
@@ -510,7 +509,7 @@ public class AuditChangeFinderTestSuite extends AbstractChangeFinderTestCase {
             // Expecting 1 change: securityUpdated for the subfolder with a null FileSystemItem and FileSystemItem name
             // since the user cannot access it anymore
             assertEquals(1, changes.size());
-            FileSystemItemChange change = changes.get(0);
+            FileSystemItemChange change = changes.getFirst();
             SimpleFileSystemItemChange simpleChange = new SimpleFileSystemItemChange(subFolder.getId(),
                     SECURITY_UPDATED_EVENT, TEST_REPOSITORY, FILE_SYSTEM_ITEM_ID_PREFIX + subFolder.getId(),
                     SUB_FOLDER);
@@ -693,7 +692,7 @@ public class AuditChangeFinderTestSuite extends AbstractChangeFinderTestCase {
             assertEquals(
                     new SimpleFileSystemItemChange(folder1.getId(), ROOT_REGISTERED, TEST_REPOSITORY,
                             DEFAULT_SYNC_ROOT_FOLDER_ITEM_FACTORY_PREFIX + folder1.getId()),
-                    toSimpleFileSystemItemChange(changes.get(0)));
+                    toSimpleFileSystemItemChange(changes.getFirst()));
 
             // Check that root unregistration is detected as a deletion
             nuxeoDriveManager.unregisterSynchronizationRoot(admin, folder1, session);
@@ -711,7 +710,7 @@ public class AuditChangeFinderTestSuite extends AbstractChangeFinderTestCase {
             assertEquals(
                     new SimpleFileSystemItemChange(folder1.getId(), DELETED_EVENT, TEST_REPOSITORY,
                             FILE_SYSTEM_ITEM_ID_PREFIX + folder1.getId()),
-                    toSimpleFileSystemItemChange(changes.get(0)));
+                    toSimpleFileSystemItemChange(changes.getFirst()));
 
             // Register back the root, it's activity is again detected by the
             // client
@@ -731,7 +730,7 @@ public class AuditChangeFinderTestSuite extends AbstractChangeFinderTestCase {
             assertEquals(
                     new SimpleFileSystemItemChange(folder1.getId(), ROOT_REGISTERED, TEST_REPOSITORY,
                             DEFAULT_SYNC_ROOT_FOLDER_ITEM_FACTORY_PREFIX + folder1.getId()),
-                    toSimpleFileSystemItemChange(changes.get(0)));
+                    toSimpleFileSystemItemChange(changes.getFirst()));
 
             // Test deletion of a root
             trashService.trashDocument(folder1);
@@ -875,7 +874,7 @@ public class AuditChangeFinderTestSuite extends AbstractChangeFinderTestCase {
             List<FileSystemItemChange> changes = getChanges();
             assertEquals(1, changes.size());
             assertEquals(new SimpleFileSystemItemChange(folder1.getId(), DELETED_EVENT),
-                    toSimpleFileSystemItemChange(changes.get(0)));
+                    toSimpleFileSystemItemChange(changes.getFirst()));
         } finally {
             commitAndWaitForAsyncCompletion();
         }
@@ -923,7 +922,7 @@ public class AuditChangeFinderTestSuite extends AbstractChangeFinderTestCase {
             changes = getChanges(user1Session.getPrincipal());
             assertEquals(1, changes.size());
             assertEquals(new SimpleFileSystemItemChange(subFolder.getId(), DELETED_EVENT),
-                    toSimpleFileSystemItemChange(changes.get(0)));
+                    toSimpleFileSystemItemChange(changes.getFirst()));
         } finally {
             commitAndWaitForAsyncCompletion();
         }
@@ -992,7 +991,7 @@ public class AuditChangeFinderTestSuite extends AbstractChangeFinderTestCase {
             changes = getChanges(session.getPrincipal());
             assertEquals(1, changes.size());
             assertEquals(new SimpleFileSystemItemChange(doc1.getId(), DOCUMENT_UPDATED),
-                    toSimpleFileSystemItemChange(changes.get(0)));
+                    toSimpleFileSystemItemChange(changes.getFirst()));
 
             log.trace("Remove doc1 from the 'Locally Edited' collection, delete doc2 and add doc 3 to the collection");
             collectionManager.removeFromCollection(locallyEditedCollection, doc1, session);
@@ -1033,7 +1032,7 @@ public class AuditChangeFinderTestSuite extends AbstractChangeFinderTestCase {
             changes = getChanges(session.getPrincipal());
             assertEquals(1, changes.size());
             assertEquals(new SimpleFileSystemItemChange(locallyEditedCollection.getId(), DELETED_EVENT),
-                    toSimpleFileSystemItemChange(changes.get(0)));
+                    toSimpleFileSystemItemChange(changes.getFirst()));
 
             log.trace("Register the 'Locally Edited' collection back as a sync root");
             nuxeoDriveManager.registerSynchronizationRoot(session.getPrincipal(), locallyEditedCollection, session);
@@ -1047,7 +1046,7 @@ public class AuditChangeFinderTestSuite extends AbstractChangeFinderTestCase {
             changes = getChanges(session.getPrincipal());
             assertEquals(1, changes.size());
             assertEquals(new SimpleFileSystemItemChange(locallyEditedCollection.getId(), ROOT_REGISTERED),
-                    toSimpleFileSystemItemChange(changes.get(0)));
+                    toSimpleFileSystemItemChange(changes.getFirst()));
 
             log.trace("Delete the 'Locally Edited' collection");
             trashService.trashDocument(locallyEditedCollection);
@@ -1138,12 +1137,15 @@ public class AuditChangeFinderTestSuite extends AbstractChangeFinderTestCase {
         DocumentModel testDoc;
         List<FileSystemItemChange> changes;
         try {
-            log.trace("testFolderishCollection1():"
-                    + "\nCreate a folder with the Collection facet (\"collectionFolder1\") inside a folder (\"folder1\");"
-                    + "\nCreate a folder with the Collection facet (\"collectionFolder2\") inside a folder (\"folder1\");"
-                    + "\nAdd \"folder1\" to the \"collectionFolder2\" collection;"
-                    + "\nCreate a collection \"collectionSyncRoot\" and register it as a synchronization root;"
-                    + "\nCreate a document \"testDoc\" and add it to both collections \"collectionFolder1\" and \"collectionSyncRoot\".\n");
+            log.trace(
+                    """
+                            testFolderishCollection1():
+                              Create a folder with the Collection facet ("collectionFolder1") inside a folder ("folder1");
+                              Create a folder with the Collection facet ("collectionFolder2") inside a folder ("folder1");
+                              Add "folder1" to the "collectionFolder2" collection;
+                              Create a collection "collectionSyncRoot" and register it as a synchronization root;
+                              Create a document "testDoc" and add it to both collections "collectionFolder1" and "collectionSyncRoot".
+                            """);
             DocumentModel collectionFolder1 = session.createDocumentModel(FOLDER_1_PATH, COLLECTION_FOLDER,
                     FOLDERISH_COLLECTION);
             collectionFolder1 = session.createDocument(collectionFolder1);
@@ -1200,12 +1202,15 @@ public class AuditChangeFinderTestSuite extends AbstractChangeFinderTestCase {
         DocumentModel testDoc;
         List<FileSystemItemChange> changes;
         try {
-            log.trace("testFolderishCollection2():"
-                    + "\nCreate a folder with the Collection facet (\"collectionFolder\") inside a folder (\"folder1\");"
-                    + "\nAdd \"folder1\" to the \"collectionFolder\" collection;"
-                    + "\nRegister \"folder1\" as a synchronization root;"
-                    + "\nCreate a collection \"collectionSyncRoot\" and register it as a synchronization root;"
-                    + "\nCreate a document \"testDoc\" and add it to both collections \"collectionFolder\" and \"collectionSyncRoot\".\n");
+            log.trace(
+                    """
+                            testFolderishCollection2():
+                              Create a folder with the Collection facet ("collectionFolder") inside a folder ("folder1");
+                              Add "folder1" to the "collectionFolder" collection;
+                              Register "folder1" as a synchronization root;
+                              Create a collection "collectionSyncRoot" and register it as a synchronization root;
+                              Create a document "testDoc" and add it to both collections "collectionFolder" and "collectionSyncRoot".
+                            """);
             collectionFolder = session.createDocumentModel(FOLDER_1_PATH, COLLECTION_FOLDER, FOLDERISH_COLLECTION);
             collectionFolder = session.createDocument(collectionFolder);
             collectionManager.addToCollection(collectionFolder, folder1, session);
@@ -1270,11 +1275,14 @@ public class AuditChangeFinderTestSuite extends AbstractChangeFinderTestCase {
         DocumentModel testDoc;
         List<FileSystemItemChange> changes;
         try {
-            log.trace("testFolderishCollection3():"
-                    + "\nCreate a folder with the Collection facet (\"collectionFolder\") inside a folder (\"folder1\") and register it as a sycnhronization root;"
-                    + "\nAdd \"folder1\" to the \"collectionFolder\" collection;"
-                    + "\nCreate a collection \"collectionSyncRoot\" and register it as a synchronization root;"
-                    + "\nCreate a document \"testDoc\" and add it to both collections \"collectionFolder\" and \"collectionSyncRoot\".\n");
+            log.trace(
+                    """
+                            testFolderishCollection3():
+                              Create a folder with the Collection facet ("collectionFolder") inside a folder ("folder1") and register it as a sycnhronization root;
+                              Add "folder1" to the "collectionFolder" collection;
+                              Create a collection "collectionSyncRoot" and register it as a synchronization root;
+                              Create a document "testDoc" and add it to both collections "collectionFolder" and "collectionSyncRoot".
+                            """);
             collectionFolder = session.createDocumentModel(FOLDER_1_PATH, COLLECTION_FOLDER, FOLDERISH_COLLECTION);
             collectionFolder = session.createDocument(collectionFolder);
             nuxeoDriveManager.registerSynchronizationRoot(session.getPrincipal(), collectionFolder, session);
@@ -1340,12 +1348,15 @@ public class AuditChangeFinderTestSuite extends AbstractChangeFinderTestCase {
         DocumentModel testDoc;
         List<FileSystemItemChange> changes;
         try {
-            log.trace("testFolderishCollection4():"
-                    + "\nCreate a collection \"collectionSyncRoot1\" and register it as a synchronization root;"
-                    + "\nAdd \"folder1\" to the \"collectionSyncRoot1\" collection;"
-                    + "\nCreate a folder with the Collection facet (\"collectionFolder\") inside (\"folder1\");"
-                    + "\nCreate a collection \"collectionSyncRoot\" and register it as a synchronization root;"
-                    + "\nCreate a document \"testDoc\" and add it to both collections \"collectionFolder\" and \"collectionSyncRoot\".\n");
+            log.trace(
+                    """
+                            testFolderishCollection4():
+                              Create a collection "collectionSyncRoot1" and register it as a synchronization root;
+                              Add "folder1" to the "collectionSyncRoot1" collection;
+                              Create a folder with the Collection facet ("collectionFolder") inside ("folder1");
+                              Create a collection "collectionSyncRoot" and register it as a synchronization root;
+                              Create a document "testDoc" and add it to both collections "collectionFolder" and "collectionSyncRoot".
+                            """);
             collectionSyncRoot1 = collectionManager.createCollection(session, "collectionSyncRoot1", null, "/");
             nuxeoDriveManager.registerSynchronizationRoot(session.getPrincipal(), collectionSyncRoot1, session);
             collectionManager.addToCollection(collectionSyncRoot1, folder1, session);
@@ -1516,7 +1527,7 @@ public class AuditChangeFinderTestSuite extends AbstractChangeFinderTestCase {
             assertEquals(
                     new SimpleFileSystemItemChange(proxy1.getId(), "documentProxyPublished", TEST_REPOSITORY,
                             DEFAULT_FILE_SYSTEM_ITEM_FACTORY_PREFIX + proxy1.getId(), "doc1"),
-                    toSimpleFileSystemItemChange(changes.get(0)));
+                    toSimpleFileSystemItemChange(changes.getFirst()));
         } finally {
             commitAndWaitForAsyncCompletion();
         }
@@ -1524,12 +1535,12 @@ public class AuditChangeFinderTestSuite extends AbstractChangeFinderTestCase {
 
     @Test
     @Deploy("org.nuxeo.ecm.core.test:OSGI-INF/test-storage-blobstore-contrib.xml")
-    public void testReplaceBlobDigest() throws Exception {
-        assumeTrue("Blob digest replacement only on DBS", coreFeature.getStorageConfiguration().isDBS());
-
+    @ConditionalIgnore(condition = IgnoreIfNotDBSRepository.class, cause = "Blob digest replacement only on DBS")
+    public void testReplaceBlobDigest() {
         DocumentModel doc;
         List<FileSystemItemChange> changes;
         String key;
+        String digest;
         try {
             log.trace("Register a sync root and create a document inside it");
             nuxeoDriveManager.registerSynchronizationRoot(session.getPrincipal(), folder1, session);
@@ -1537,6 +1548,7 @@ public class AuditChangeFinderTestSuite extends AbstractChangeFinderTestCase {
             doc.setPropertyValue("file:content", new StringBlob("The file content"));
             doc = session.createDocument(doc);
             key = ((ManagedBlob) doc.getPropertyValue("file:content")).getKey();
+            digest = key.split(":")[1];
         } finally {
             commitAndWaitForAsyncCompletion();
         }
@@ -1545,7 +1557,7 @@ public class AuditChangeFinderTestSuite extends AbstractChangeFinderTestCase {
             getChanges(); // ignored, not the point of this test
 
             log.trace("Replace blob digest");
-            assertEquals(key, session.replaceBlobDigest(doc.getRef(), key, "newkey", "newkey"));
+            assertEquals(digest, session.replaceBlobDigest(doc.getRef(), key, "newkey", "newkey"));
         } finally {
             commitAndWaitForAsyncCompletion();
         }
@@ -1555,13 +1567,13 @@ public class AuditChangeFinderTestSuite extends AbstractChangeFinderTestCase {
             // - blobDigestUpdated for doc
             changes = getChanges();
             assertEquals(1, changes.size());
-            FileSystemItemChange change = changes.get(0);
+            FileSystemItemChange change = changes.getFirst();
             assertEquals(
                     new SimpleFileSystemItemChange(doc.getId(), "blobDigestUpdated", "test",
                             "defaultFileSystemItemFactory#test#" + doc.getId(), "doc"),
                     toSimpleFileSystemItemChange(change));
             assertEquals("newkey", ((FileItem) change.getFileSystemItem()).getDigest());
-            assertEquals(key, ((FileItem) change.getFileSystemItem()).getOldDigest());
+            assertEquals(digest, ((FileItem) change.getFileSystemItem()).getOldDigest());
         } finally {
             commitAndWaitForAsyncCompletion();
         }
@@ -1603,7 +1615,7 @@ public class AuditChangeFinderTestSuite extends AbstractChangeFinderTestCase {
             assertEquals(
                     new SimpleFileSystemItemChange(doc.getId(), "documentLocked", TEST_REPOSITORY,
                             DEFAULT_FILE_SYSTEM_ITEM_FACTORY_PREFIX + doc.getId(), "doc"),
-                    toSimpleFileSystemItemChange(changes.get(0)));
+                    toSimpleFileSystemItemChange(changes.getFirst()));
 
             log.trace("Unlock doc");
             session.removeLock(doc.getRef());
@@ -1619,7 +1631,7 @@ public class AuditChangeFinderTestSuite extends AbstractChangeFinderTestCase {
             assertEquals(
                     new SimpleFileSystemItemChange(doc.getId(), "documentUnlocked", TEST_REPOSITORY,
                             DEFAULT_FILE_SYSTEM_ITEM_FACTORY_PREFIX + doc.getId(), "doc"),
-                    toSimpleFileSystemItemChange(changes.get(0)));
+                    toSimpleFileSystemItemChange(changes.getFirst()));
         } finally {
             commitAndWaitForAsyncCompletion();
         }
