@@ -30,6 +30,7 @@ import static org.apache.commons.lang3.StringUtils.isBlank;
 import static org.apache.commons.lang3.StringUtils.isEmpty;
 import static org.nuxeo.ecm.core.api.VersioningOption.NONE;
 import static org.nuxeo.ecm.core.api.security.SecurityConstants.EVERYTHING;
+import static org.nuxeo.ecm.core.api.versioning.VersioningService.DISABLE_AUTOMATIC_VERSIONING;
 import static org.nuxeo.ecm.core.api.versioning.VersioningService.VERSIONING_OPTION;
 import static org.nuxeo.ecm.core.io.marshallers.json.document.DocumentModelJsonReader.applyDirtyPropertyValues;
 import static org.nuxeo.ecm.core.query.sql.NXQL.ECM_ANCESTORID;
@@ -108,7 +109,7 @@ public class TreeCommentManager extends AbstractCommentManager {
     protected static final String GET_EXTERNAL_COMMENT_PAGE_PROVIDER_NAME = "GET_EXTERNAL_COMMENT_BY_ECM_ANCESTOR";
 
     protected static final String GET_COMMENTS_FOR_DOCUMENT_PAGE_PROVIDER_NAME = "GET_COMMENTS_FOR_DOCUMENT_BY_ECM_PARENT";
-    
+
     protected static final String GET_COMMENTS_FOR_DOCUMENTS_PAGE_PROVIDER_NAME = "GET_COMMENTS_FOR_DOCUMENTS_BY_COMMENT_ANCESTOR";
 
     protected static final String SERVICE_WITHOUT_IMPLEMENTATION_MESSAGE = "This service implementation does not implement deprecated API.";
@@ -154,12 +155,6 @@ public class TreeCommentManager extends AbstractCommentManager {
         var pageProvider = (PageProvider<DocumentModel>) ppService.getPageProvider(
                 GET_COMMENTS_FOR_DOCUMENTS_PAGE_PROVIDER_NAME, null, null, null, props, new ArrayList<>(documentIds));
         return pageProvider.getCurrentPage().stream().map(doc -> doc.getAdapter(Comment.class)).collect(toList());
-    }
-
-    @Override
-    @SuppressWarnings("removal")
-    public List<DocumentModel> getDocumentsForComment(DocumentModel comment) {
-        throw new UnsupportedOperationException(SERVICE_WITHOUT_IMPLEMENTATION_MESSAGE);
     }
 
     @Override
@@ -249,23 +244,6 @@ public class TreeCommentManager extends AbstractCommentManager {
     }
 
     @Override
-    public DocumentModel createComment(DocumentModel doc, String text) {
-        throw new UnsupportedOperationException(SERVICE_WITHOUT_IMPLEMENTATION_MESSAGE);
-    }
-
-    @Override
-    @SuppressWarnings("removal")
-    public DocumentModel createComment(DocumentModel doc, String text, String author) {
-        throw new UnsupportedOperationException(SERVICE_WITHOUT_IMPLEMENTATION_MESSAGE);
-    }
-
-    @Override
-    @SuppressWarnings("removal")
-    public DocumentModel createComment(DocumentModel doc, DocumentModel parent, DocumentModel child) {
-        throw new UnsupportedOperationException(SERVICE_WITHOUT_IMPLEMENTATION_MESSAGE);
-    }
-
-    @Override
     public Comment updateComment(CoreSession session, String commentId, Comment comment) {
         // Get the comment doc model
         DocumentModel commentDoc = getCommentDocumentModel(session, commentId);
@@ -322,12 +300,6 @@ public class TreeCommentManager extends AbstractCommentManager {
         removeComment(s, new IdRef(commentId));
     }
 
-    @Override
-    @SuppressWarnings("removal")
-    public void deleteComment(DocumentModel doc, DocumentModel comment) {
-        throw new UnsupportedOperationException(SERVICE_WITHOUT_IMPLEMENTATION_MESSAGE);
-    }
-
     /**
      * Returns the {@link DocumentRef} of the comments location in repository for the given commented document model.
      *
@@ -351,14 +323,11 @@ public class TreeCommentManager extends AbstractCommentManager {
     }
 
     @Override
+    @SuppressWarnings("ConstantValue") // keep the switch in case the enum receive a new value one day
     public boolean hasFeature(Feature feature) {
-        switch (feature) {
-        case COMMENTS_LINKED_WITH_PROPERTY:
-        case COMMENTS_ARE_SPECIAL_CHILDREN:
-            return true;
-        default:
-            throw new UnsupportedOperationException(feature.name());
-        }
+        return switch (feature) {
+            case COMMENTS_ARE_SPECIAL_CHILDREN -> true;
+        };
     }
 
     @Override
@@ -408,7 +377,7 @@ public class TreeCommentManager extends AbstractCommentManager {
         if (documents.isEmpty()) {
             throw new CommentNotFoundException(String.format("The external comment %s does not exist.", entityId));
         }
-        return documents.get(0);
+        return documents.getFirst();
     }
 
     /**
@@ -536,6 +505,7 @@ public class TreeCommentManager extends AbstractCommentManager {
         topLevelDoc.setPropertyValue(RELATED_TEXT_RESOURCES, (Serializable) resources);
         topLevelDoc.putContextData(DISABLE_NOTIFICATION_SERVICE, TRUE);
         topLevelDoc.putContextData(VERSIONING_OPTION, NONE);
+        topLevelDoc.putContextData(DISABLE_AUTOMATIC_VERSIONING, TRUE);
         topLevelDoc.putContextData(DISABLE_DUBLINCORE_LISTENER, TRUE);
         session.saveDocument(topLevelDoc);
     }
