@@ -1,5 +1,5 @@
 /*
- * (C) Copyright 2010 Nuxeo SA (http://nuxeo.com/) and others.
+ * (C) Copyright 2010-2025 Nuxeo (http://nuxeo.com/) and others.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,7 +17,6 @@
  *     Antoine Taillefer
  *     Thomas Roger
  */
-
 package org.nuxeo.ecm.platform.rendition.publisher;
 
 import static org.junit.Assert.assertEquals;
@@ -32,7 +31,7 @@ import static org.nuxeo.ecm.platform.rendition.publisher.RenditionPublicationFac
 import java.util.Collections;
 import java.util.List;
 
-import javax.inject.Inject;
+import jakarta.inject.Inject;
 
 import org.junit.Test;
 import org.junit.runner.RunWith;
@@ -51,10 +50,11 @@ import org.nuxeo.ecm.platform.rendition.Rendition;
 import org.nuxeo.ecm.platform.rendition.service.RenditionFeature;
 import org.nuxeo.ecm.platform.rendition.service.RenditionService;
 import org.nuxeo.runtime.api.Framework;
-import org.nuxeo.runtime.test.runner.ConditionalIgnoreRule;
+import org.nuxeo.runtime.test.runner.ConditionalIgnore;
 import org.nuxeo.runtime.test.runner.Deploy;
 import org.nuxeo.runtime.test.runner.Features;
 import org.nuxeo.runtime.test.runner.FeaturesRunner;
+import org.nuxeo.runtime.test.runner.IgnoreIfWindows;
 
 @RunWith(FeaturesRunner.class)
 @Features(RenditionFeature.class)
@@ -62,12 +62,11 @@ import org.nuxeo.runtime.test.runner.FeaturesRunner;
 @Deploy("org.nuxeo.ecm.platform.versioning.api")
 @Deploy("org.nuxeo.ecm.platform.versioning")
 @Deploy("org.nuxeo.ecm.relations")
-@Deploy("org.nuxeo.ecm.relations.jena")
+@Deploy("org.nuxeo.ecm.relations.default.config")
 @Deploy("org.nuxeo.ecm.platform.publisher")
 @Deploy("org.nuxeo.ecm.platform.task.core")
 @Deploy("org.nuxeo.ecm.platform.task.testing")
 @Deploy("org.nuxeo.ecm.platform.rendition.publisher")
-@Deploy("org.nuxeo.ecm.platform.rendition.publisher:relations-default-jena-contrib.xml")
 public class TestRenditionPublication {
 
     @Inject
@@ -78,14 +77,14 @@ public class TestRenditionPublication {
 
     @Test
     public void shouldPublishASimpleProxyIfNoRenditionNameIsDefined() {
-        String defaultTreeName = publisherService.getAvailablePublicationTree().get(0);
+        String defaultTreeName = publisherService.getAvailablePublicationTree().getFirst();
         PublicationTree tree = publisherService.getPublicationTree(defaultTreeName, session, null);
 
         List<PublicationNode> nodes = tree.getChildrenNodes();
         assertEquals(1, nodes.size());
-        assertEquals("Section1", nodes.get(0).getTitle());
+        assertEquals("Section1", nodes.getFirst().getTitle());
 
-        PublicationNode targetNode = nodes.get(0);
+        PublicationNode targetNode = nodes.getFirst();
         assertTrue(tree.canPublishTo(targetNode));
 
         DocumentModel file = session.createDocumentModel("/", "dummy", "File");
@@ -100,16 +99,16 @@ public class TestRenditionPublication {
     }
 
     @Test
-    @ConditionalIgnoreRule.Ignore(condition = ConditionalIgnoreRule.IgnoreWindows.class, cause = "NXP-26757")
+    @ConditionalIgnore(condition = IgnoreIfWindows.class, cause = "NXP-26757")
     public void shouldPublishAPDFRendition() {
-        String defaultTreeName = publisherService.getAvailablePublicationTree().get(0);
+        String defaultTreeName = publisherService.getAvailablePublicationTree().getFirst();
         PublicationTree tree = publisherService.getPublicationTree(defaultTreeName, session, null);
 
         List<PublicationNode> nodes = tree.getChildrenNodes();
         assertEquals(1, nodes.size());
-        assertEquals("Section1", nodes.get(0).getTitle());
+        assertEquals("Section1", nodes.getFirst().getTitle());
 
-        PublicationNode targetNode = nodes.get(0);
+        PublicationNode targetNode = nodes.getFirst();
         assertTrue(tree.canPublishTo(targetNode));
 
         DocumentModel file = session.createDocumentModel("/", "dummy", "File");
@@ -176,9 +175,9 @@ public class TestRenditionPublication {
     @Test
     @Deploy("org.nuxeo.ecm.platform.rendition.publisher:test-rendition-definition-providers-contrib.xml")
     public void shouldTakeIntoAccountRenditionDefinitionProviders() {
-        String defaultTreeName = publisherService.getAvailablePublicationTree().get(0);
+        String defaultTreeName = publisherService.getAvailablePublicationTree().getFirst();
         PublicationTree tree = publisherService.getPublicationTree(defaultTreeName, session, null);
-        PublicationNode targetNode = tree.getChildrenNodes().get(0);
+        PublicationNode targetNode = tree.getChildrenNodes().getFirst();
 
         DocumentModel file = session.createDocumentModel("/", "dummy", "File");
         file = session.createDocument(file);
