@@ -1,5 +1,5 @@
 /*
- * (C) Copyright 2018 Nuxeo (http://nuxeo.com/) and others.
+ * (C) Copyright 2018-2024 Nuxeo (http://nuxeo.com/) and others.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,9 +18,8 @@
  */
 package org.nuxeo.ecm.platform.ui.web.auth;
 
+import static jakarta.servlet.http.HttpServletResponse.SC_UNAUTHORIZED;
 import static java.nio.charset.StandardCharsets.UTF_8;
-import static java.util.stream.Collectors.toList;
-import static javax.servlet.http.HttpServletResponse.SC_UNAUTHORIZED;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertNotNull;
@@ -66,13 +65,14 @@ import java.util.Map;
 
 import javax.security.auth.login.LoginContext;
 import javax.security.auth.login.LoginException;
-import javax.servlet.FilterChain;
-import javax.servlet.ServletException;
-import javax.servlet.ServletRequest;
-import javax.servlet.ServletResponse;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
-import javax.servlet.http.HttpSession;
+
+import jakarta.servlet.FilterChain;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.ServletRequest;
+import jakarta.servlet.ServletResponse;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
+import jakarta.servlet.http.HttpSession;
 
 import org.apache.commons.io.output.ByteArrayOutputStream;
 import org.junit.After;
@@ -142,7 +142,7 @@ public class TestNuxeoAuthenticationFilter {
     }
 
     @Before
-    public void setUp() throws Exception {
+    public void setUp() {
         // filter
         filter = new NuxeoAuthenticationFilter();
         // filter chain
@@ -258,13 +258,13 @@ public class TestNuxeoAuthenticationFilter {
         } else {
             verify(eventProducer).fireEvent(eventCaptor.capture());
             List<Event> events = eventCaptor.getAllValues();
-            List<String> eventNames = events.stream().map(Event::getName).collect(toList());
+            List<String> eventNames = events.stream().distinct().map(Event::getName).toList();
             assertEquals(Arrays.asList(expectedEventNames), eventNames);
         }
     }
 
     protected void checkNoEvents() {
-        checkEvents(new String[] {});
+        checkEvents();
     }
 
     protected void checkCachedUser(Map<String, Object> sessionAttributes, String username) {
@@ -284,7 +284,7 @@ public class TestNuxeoAuthenticationFilter {
      * Computation of the requested page based on request info.
      */
     @Test
-    public void testGetRequestedPage() throws Exception {
+    public void testGetRequestedPage() {
         // case of a servlet mapped with <url-pattern>*.xhtml</url-pattern>
         doTestGetRequestedPage("foo/bar.xhtml", "/core/foo/bar.xhtml", "/foo/bar.xhtml", null, null);
         doTestGetRequestedPage("foo/bar.xhtml", "/core/login.jsp/../foo/bar.xhtml;jsessionid=123?gee=moo",
@@ -360,7 +360,7 @@ public class TestNuxeoAuthenticationFilter {
      * Auth in session.
      */
     @Test
-    public void testAuthCached() throws Exception {
+    public void testAuthCached() throws IOException, ServletException {
         HttpServletRequest request = mock(HttpServletRequest.class);
         HttpServletResponse response = mock(HttpServletResponse.class);
         HttpSession session = mock(HttpSession.class);
@@ -391,7 +391,7 @@ public class TestNuxeoAuthenticationFilter {
      * No auth chain configured: no auth.
      */
     @Test
-    public void testNoAuthPlugins() throws Exception {
+    public void testNoAuthPlugins() throws IOException, ServletException {
         HttpServletRequest request = mock(HttpServletRequest.class);
         HttpServletResponse response = mock(HttpServletResponse.class);
         when(request.getSession(eq(false))).thenReturn(null);
@@ -433,7 +433,7 @@ public class TestNuxeoAuthenticationFilter {
      */
     @Test
     @Deploy("org.nuxeo.ecm.platform.web.common.test:OSGI-INF/test-authchain-dummy-token.xml")
-    public void testAuthPluginToken() throws Exception {
+    public void testAuthPluginToken() throws IOException, ServletException {
         HttpServletRequest request = mock(HttpServletRequest.class);
         HttpServletResponse response = mock(HttpServletResponse.class);
         HttpSession session = mock(HttpSession.class);
@@ -461,7 +461,7 @@ public class TestNuxeoAuthenticationFilter {
      */
     @Test
     @Deploy("org.nuxeo.ecm.platform.web.common.test:OSGI-INF/test-authchain-dummy-token.xml")
-    public void testAuthPluginTokenThenRedirectToPage() throws Exception {
+    public void testAuthPluginTokenThenRedirectToPage() throws IOException, ServletException {
         HttpServletRequest request = mock(HttpServletRequest.class);
         HttpServletResponse response = mock(HttpServletResponse.class);
         HttpSession session = mock(HttpSession.class);
@@ -492,7 +492,7 @@ public class TestNuxeoAuthenticationFilter {
      */
     @Test
     @Deploy("org.nuxeo.ecm.platform.web.common.test:OSGI-INF/test-authchain-dummy-token.xml")
-    public void testAuthPluginTokenFailedSoRedirectToLoginPage() throws Exception {
+    public void testAuthPluginTokenFailedSoRedirectToLoginPage() throws IOException, ServletException {
         HttpServletRequest request = mock(HttpServletRequest.class);
         HttpServletResponse response = mock(HttpServletResponse.class);
         HttpSession session = mock(HttpSession.class);
@@ -525,7 +525,7 @@ public class TestNuxeoAuthenticationFilter {
      */
     @Test
     @Deploy("org.nuxeo.ecm.platform.web.common.test:OSGI-INF/test-authchain-dummy-token.xml")
-    public void testAuthAsSystemIsForbidden() throws Exception {
+    public void testAuthAsSystemIsForbidden() throws IOException, ServletException {
         HttpServletRequest request = mock(HttpServletRequest.class);
         HttpServletResponse response = mock(HttpServletResponse.class);
         HttpSession session = mock(HttpSession.class);
@@ -561,7 +561,7 @@ public class TestNuxeoAuthenticationFilter {
      */
     @Test
     @Deploy("org.nuxeo.ecm.platform.web.common.test:OSGI-INF/test-authchain-dummy-anonymous.xml")
-    public void testAuthPluginAnonymous() throws Exception {
+    public void testAuthPluginAnonymous() throws IOException, ServletException {
         HttpServletRequest request = mock(HttpServletRequest.class);
         HttpServletResponse response = mock(HttpServletResponse.class);
         HttpSession session = mock(HttpSession.class);
@@ -587,7 +587,7 @@ public class TestNuxeoAuthenticationFilter {
      */
     @Test
     @Deploy("org.nuxeo.ecm.platform.web.common.test:OSGI-INF/test-authchain-dummy-anonymous.xml")
-    public void testAuthForceAnonymousLogin() throws Exception {
+    public void testAuthForceAnonymousLogin() throws IOException, ServletException {
         HttpServletRequest request = mock(HttpServletRequest.class);
         HttpServletResponse response = mock(HttpServletResponse.class);
         HttpSession session = mock(HttpSession.class);
@@ -625,11 +625,55 @@ public class TestNuxeoAuthenticationFilter {
     }
 
     /**
+     * Forced authentication for anonymous user, followed by simulated Web UI Service worker call. Then, logging in as a
+     * non anonymous user is working fine.
+     */
+    @Test
+    @Deploy("org.nuxeo.ecm.platform.web.common.test:OSGI-INF/test-authchain-dummy-anonymous.xml")
+    public void testAuthForceAnonymousLoginServiceWorker() throws IOException, ServletException {
+        HttpServletRequest request = mock(HttpServletRequest.class);
+        HttpServletResponse response = mock(HttpServletResponse.class);
+        HttpSession session = mock(HttpSession.class);
+        Map<String, Object> sessionAttributes = mockSessionAttributes(session);
+        when(request.getSession(anyBoolean())).thenReturn(session);
+
+        // force anonymous login
+        mockRequestURI(request, "/my/page");
+        when(request.getParameter(eq(FORCE_ANONYMOUS_LOGIN))).thenReturn("true");
+        ByteArrayOutputStream out = new ByteArrayOutputStream();
+        PrintWriter writer = new PrintWriter(new OutputStreamWriter(out, UTF_8), true);
+        when(response.getWriter()).thenReturn(writer);
+        filter.doFilter(request, response, chain);
+
+        checkNoCachedUser(sessionAttributes);
+        checkNoEvents();
+
+        // simulate UI Service worker call
+        mockRequestURI(request, "/sw");
+        when(request.getParameter(eq(FORCE_ANONYMOUS_LOGIN))).thenReturn("false");
+        filter.doFilter(request, response, chain);
+
+        // anonymous user should not be cached
+        checkNoCachedUser(sessionAttributes);
+        checkNoEvents();
+
+        // log in as a non anonymous user
+        mockRequestURI(request, "/my/page");
+        when(request.getParameter(eq(DUMMY_AUTH_FORM_USERNAME_KEY))).thenReturn("bob");
+        when(request.getParameter(eq(DUMMY_AUTH_FORM_PASSWORD_KEY))).thenReturn("bob");
+        filter.doFilter(request, response, chain);
+
+        checkCachedUser(sessionAttributes, "bob");
+        verify(session).invalidate();
+        checkEvents(EVENT_LOGIN_SUCCESS);
+    }
+
+    /**
      * No auth but redirect to plugin login page.
      */
     @Test
     @Deploy("org.nuxeo.ecm.platform.web.common.test:OSGI-INF/test-authchain-dummy-form.xml")
-    public void testAuthPluginFormRedirectToLoginPage() throws Exception {
+    public void testAuthPluginFormRedirectToLoginPage() throws IOException, ServletException {
         HttpServletRequest request = mock(HttpServletRequest.class);
         HttpServletResponse response = mock(HttpServletResponse.class);
         HttpSession session = mock(HttpSession.class);
@@ -673,7 +717,7 @@ public class TestNuxeoAuthenticationFilter {
      */
     @Test
     @Deploy("org.nuxeo.ecm.platform.web.common.test:OSGI-INF/test-authchain-dummy-no-start-url.xml")
-    public void testNoStartURLSaving() throws Exception {
+    public void testNoStartURLSaving() throws IOException, ServletException {
         HttpServletRequest request = mock(HttpServletRequest.class);
         HttpServletResponse response = mock(HttpServletResponse.class);
         HttpSession session = mock(HttpSession.class);
@@ -705,7 +749,7 @@ public class TestNuxeoAuthenticationFilter {
      */
     @Test
     @Deploy("org.nuxeo.ecm.platform.web.common.test:OSGI-INF/test-authchain-dummy-form.xml")
-    public void testAuthPluginFormReLogin() throws Exception {
+    public void testAuthPluginFormReLogin() throws IOException, ServletException {
         HttpServletRequest request = mock(HttpServletRequest.class);
         HttpServletResponse response = mock(HttpServletResponse.class);
         HttpSession session = mock(HttpSession.class);
@@ -746,7 +790,7 @@ public class TestNuxeoAuthenticationFilter {
      */
     @Test
     @Deploy("org.nuxeo.ecm.platform.web.common.test:OSGI-INF/test-authchain-dummy-form.xml")
-    public void testAuthPluginFormGet() throws Exception {
+    public void testAuthPluginFormGet() throws IOException, ServletException {
         HttpServletRequest request = mock(HttpServletRequest.class);
         HttpServletResponse response = mock(HttpServletResponse.class);
         mockRequestURI(request, "/dummy_form_login.jsp", "", "");
@@ -764,7 +808,7 @@ public class TestNuxeoAuthenticationFilter {
      */
     @Test
     @Deploy("org.nuxeo.ecm.platform.web.common.test:OSGI-INF/test-authchain-dummy-form.xml")
-    public void testAuthPluginFormSubmit() throws Exception {
+    public void testAuthPluginFormSubmit() throws IOException, ServletException {
         HttpServletRequest request = mock(HttpServletRequest.class);
         HttpServletResponse response = mock(HttpServletResponse.class);
         HttpSession session = mock(HttpSession.class);
@@ -799,7 +843,7 @@ public class TestNuxeoAuthenticationFilter {
      */
     @Test
     @Deploy("org.nuxeo.ecm.platform.web.common.test:OSGI-INF/test-authchain-dummy-form.xml")
-    public void testAuthPluginFormFailedSoRedirectToLoginPage() throws Exception {
+    public void testAuthPluginFormFailedSoRedirectToLoginPage() throws IOException, ServletException {
         HttpServletRequest request = mock(HttpServletRequest.class);
         Map<String, Object> requestAttributes = mockRequestAttributes(request);
         HttpServletResponse response = mock(HttpServletResponse.class);
@@ -832,7 +876,7 @@ public class TestNuxeoAuthenticationFilter {
      */
     @Test
     @Deploy("org.nuxeo.ecm.platform.web.common.test:OSGI-INF/test-authchain-dummy-form.xml")
-    public void testAuthPluginFormLogout() throws Exception {
+    public void testAuthPluginFormLogout() throws LoginException, IOException, ServletException {
         HttpServletRequest request = mock(HttpServletRequest.class);
         HttpServletResponse response = mock(HttpServletResponse.class);
         HttpSession session = mock(HttpSession.class);
@@ -874,7 +918,7 @@ public class TestNuxeoAuthenticationFilter {
      */
     @Test
     @Deploy("org.nuxeo.ecm.platform.web.common.test:OSGI-INF/test-authchain-dummy-form.xml")
-    public void testAuthPluginFormLogoutCallbackURL() throws Exception {
+    public void testAuthPluginFormLogoutCallbackURL() throws LoginException, IOException, ServletException {
         HttpServletRequest request = mock(HttpServletRequest.class);
         HttpServletResponse response = mock(HttpServletResponse.class);
         HttpSession session = mock(HttpSession.class);
@@ -904,7 +948,7 @@ public class TestNuxeoAuthenticationFilter {
      */
     @Test
     @Deploy("org.nuxeo.ecm.platform.web.common.test:OSGI-INF/test-authchain-dummy-form.xml")
-    public void testAuthPluginFormLogoutInvalidCallbackURL() throws Exception {
+    public void testAuthPluginFormLogoutInvalidCallbackURL() throws LoginException, IOException, ServletException {
         HttpServletRequest request = mock(HttpServletRequest.class);
         HttpServletResponse response = mock(HttpServletResponse.class);
         HttpSession session = mock(HttpSession.class);
@@ -934,7 +978,7 @@ public class TestNuxeoAuthenticationFilter {
      */
     @Test
     @Deploy("org.nuxeo.ecm.platform.web.common.test:OSGI-INF/test-authchain-dummy-sso.xml")
-    public void testAuthPluginSSORedirectToSSOLoginPage() throws Exception {
+    public void testAuthPluginSSORedirectToSSOLoginPage() throws IOException, ServletException {
         HttpServletRequest request = mock(HttpServletRequest.class);
         HttpServletResponse response = mock(HttpServletResponse.class);
         HttpSession session = mock(HttpSession.class);
@@ -974,7 +1018,7 @@ public class TestNuxeoAuthenticationFilter {
      */
     @Test
     @Deploy("org.nuxeo.ecm.platform.web.common.test:OSGI-INF/test-authchain-dummy-sso.xml")
-    public void testAuthPluginSSOWithTicket() throws Exception {
+    public void testAuthPluginSSOWithTicket() throws IOException, ServletException {
         HttpServletRequest request = mock(HttpServletRequest.class);
         HttpServletResponse response = mock(HttpServletResponse.class);
         HttpSession session = mock(HttpSession.class);
@@ -1008,7 +1052,7 @@ public class TestNuxeoAuthenticationFilter {
      */
     @Test
     @Deploy("org.nuxeo.ecm.platform.web.common.test:OSGI-INF/test-authchain-dummy-sso.xml")
-    public void testAuthPluginSSOLogout() throws Exception {
+    public void testAuthPluginSSOLogout() throws LoginException, IOException, ServletException {
         HttpServletRequest request = mock(HttpServletRequest.class);
         HttpServletResponse response = mock(HttpServletResponse.class);
         HttpSession session = mock(HttpSession.class);
