@@ -1,5 +1,5 @@
 /*
- * (C) Copyright 2016 Nuxeo SA (http://nuxeo.com/) and others.
+ * (C) Copyright 2016-2024 Nuxeo (http://nuxeo.com/) and others.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,6 +19,7 @@
 
 package org.nuxeo.ecm.user.center.profile.rest;
 
+import static java.util.Calendar.MAY;
 import static org.nuxeo.common.utils.DateUtils.toZonedDateTime;
 import static org.nuxeo.ecm.user.center.profile.UserProfileConstants.USER_PROFILE_AVATAR_FIELD;
 import static org.nuxeo.ecm.user.center.profile.UserProfileConstants.USER_PROFILE_BIRTHDATE_FIELD;
@@ -30,9 +31,8 @@ import java.io.Serializable;
 import java.time.format.DateTimeFormatter;
 import java.util.Calendar;
 import java.util.List;
-import java.util.stream.Collectors;
 
-import javax.inject.Inject;
+import jakarta.inject.Inject;
 
 import org.junit.Before;
 import org.junit.Test;
@@ -48,8 +48,8 @@ import org.nuxeo.ecm.core.io.marshallers.json.AbstractJsonWriterTest;
 import org.nuxeo.ecm.core.io.marshallers.json.JsonAssert;
 import org.nuxeo.ecm.core.io.registry.context.RenderingContext;
 import org.nuxeo.ecm.core.io.registry.context.RenderingContext.CtxBuilder;
-import org.nuxeo.ecm.platform.test.PlatformFeature;
 import org.nuxeo.ecm.platform.usermanager.io.NuxeoPrincipalJsonWriter;
+import org.nuxeo.ecm.user.center.profile.UserProfileFeature;
 import org.nuxeo.ecm.user.center.profile.UserProfileService;
 import org.nuxeo.runtime.test.runner.Deploy;
 import org.nuxeo.runtime.test.runner.Features;
@@ -58,9 +58,7 @@ import org.nuxeo.runtime.test.runner.Features;
  * @author <a href="mailto:ak@nuxeo.com">Arnaud Kervern</a>
  * @since 8.1
  */
-@Features(PlatformFeature.class)
-@Deploy("org.nuxeo.ecm.platform.userworkspace")
-@Deploy("org.nuxeo.ecm.user.center.profile")
+@Features(UserProfileFeature.class)
 @Deploy("org.nuxeo.ecm.user.center.profile:OSGI-INF/test-core-types-contrib.xml")
 public class UserProfileEnricherTest extends AbstractJsonWriterTest.External<NuxeoPrincipalJsonWriter, NuxeoPrincipal> {
 
@@ -71,7 +69,7 @@ public class UserProfileEnricherTest extends AbstractJsonWriterTest.External<Nux
     }
 
     @Inject
-    CoreSession session;
+    protected CoreSession session;
 
     @Inject
     protected UserProfileService userProfileService;
@@ -86,7 +84,7 @@ public class UserProfileEnricherTest extends AbstractJsonWriterTest.External<Nux
     @Before
     public void setUp() throws IOException {
         birthDate = Calendar.getInstance();
-        birthDate.set(1973, 4, 19, 22, 13, 0);
+        birthDate.set(1973, MAY, 19, 22, 13, 0);
         DocumentModel up = userProfileService.getUserProfileDocument(session);
         up.setPropertyValue(USER_PROFILE_PHONENUMBER_FIELD, "mynumber");
         up.setPropertyValue(USER_PROFILE_BIRTHDATE_FIELD, birthDate.getTime());
@@ -129,12 +127,12 @@ public class UserProfileEnricherTest extends AbstractJsonWriterTest.External<Nux
         List<DocumentRef> refs = session.getChildren(session.getRootDocument().getRef())
                                         .stream()
                                         .map(DocumentModel::getRef)
-                                        .collect(Collectors.toList());
-        session.removeDocuments(refs.toArray(new DocumentRef[refs.size()]));
+                                        .toList();
+        session.removeDocuments(refs.toArray(DocumentRef[]::new));
         session.save();
         RenderingContext ctx = CtxBuilder.session(session).enrich("user", NAME).get();
         JsonAssert jsonAssert = jsonAssert(session.getPrincipal(), ctx);
-        jsonAssert = jsonAssert.get(String.format("contextParameters.%s", NAME)).isNull();
+        jsonAssert.get(String.format("contextParameters.%s", NAME)).isNull();
     }
 
     @Test
