@@ -23,7 +23,6 @@ package org.nuxeo.launcher;
 
 import static java.nio.charset.StandardCharsets.UTF_8;
 import static java.util.stream.Collectors.toList;
-import static org.apache.commons.lang3.StringUtils.defaultString;
 import static org.apache.logging.log4j.LogManager.ROOT_LOGGER_NAME;
 import static org.nuxeo.common.Environment.NUXEO_CONTEXT_PATH;
 import static org.nuxeo.common.Environment.NUXEO_DATA_DIR;
@@ -42,8 +41,6 @@ import static org.nuxeo.launcher.config.ConfigurationConstants.TOMCAT_STARTUP_CL
 import java.io.Console;
 import java.io.File;
 import java.io.IOException;
-import java.io.OutputStream;
-import java.io.OutputStreamWriter;
 import java.net.SocketTimeoutException;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -58,6 +55,7 @@ import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Scanner;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
@@ -66,14 +64,7 @@ import java.util.function.Predicate;
 import java.util.regex.Pattern;
 import java.util.stream.Stream;
 
-import javax.validation.constraints.NotNull;
-import javax.xml.bind.JAXBContext;
-import javax.xml.bind.JAXBException;
-import javax.xml.bind.Marshaller;
-import javax.xml.stream.FactoryConfigurationError;
-import javax.xml.stream.XMLOutputFactory;
-import javax.xml.stream.XMLStreamException;
-import javax.xml.stream.XMLStreamWriter;
+import jakarta.validation.constraints.NotNull;
 
 import org.apache.commons.cli.CommandLine;
 import org.apache.commons.cli.CommandLineParser;
@@ -113,21 +104,14 @@ import org.nuxeo.launcher.connect.ConnectBroker;
 import org.nuxeo.launcher.connect.ConnectRegistrationBroker;
 import org.nuxeo.launcher.connect.LauncherRestartException;
 import org.nuxeo.launcher.gui.NuxeoLauncherGUI;
-import org.nuxeo.launcher.info.CommandInfo;
 import org.nuxeo.launcher.info.CommandSetInfo;
-import org.nuxeo.launcher.info.ConfigurationInfo;
-import org.nuxeo.launcher.info.DistributionInfo;
 import org.nuxeo.launcher.info.InstanceInfo;
 import org.nuxeo.launcher.info.KeyValueInfo;
-import org.nuxeo.launcher.info.MessageInfo;
 import org.nuxeo.launcher.info.PackageInfo;
+import org.nuxeo.launcher.io.NuxeoLauncherTechPrinter;
 import org.nuxeo.launcher.monitoring.StatusServletClient;
 import org.nuxeo.launcher.process.ProcessManager;
 import org.nuxeo.log4j.Log4JHelper;
-
-import com.sun.jersey.api.json.JSONConfiguration;
-import com.sun.jersey.json.impl.writer.JsonXmlStreamWriter;
-import com.sun.xml.bind.marshaller.MinimumEscapeHandler;
 
 /**
  * @author jcarsique
@@ -584,9 +568,7 @@ public class NuxeoLauncher {
 
     private static boolean strict = true;
 
-    private boolean xmlOutput = false;
-
-    private boolean jsonOutput = false;
+    protected NuxeoLauncherTechPrinter techPrinter = null;
 
     private ConnectBroker connectBroker = null;
 
@@ -701,7 +683,8 @@ public class NuxeoLauncher {
     protected Collection<? extends String> getServerProperties() {
         File home = configurationGenerator.getConfigurationHolder().getHomePath().toFile();
         return List.of(formatPropertyToCommandLine("catalina.base", home.getPath()),
-                formatPropertyToCommandLine("catalina.home", home.getPath()));
+                formatPropertyToCommandLine("catalina.home", home.getPath()),
+                formatPropertyToCommandLine("java.util.logging.manager", "org.apache.juli.ClassLoaderLogManager"));
     }
 
     private File getJavaExecutable() {
@@ -709,8 +692,12 @@ public class NuxeoLauncher {
     }
 
     protected String getClassPath() {
-        File binDir = configurationGenerator.getConfigurationHolder().getHomePath().resolve(BIN).toFile();
+        var homePath = configurationGenerator.getConfigurationHolder().getHomePath();
+        File binDir = homePath.resolve(BIN).toFile();
         String cp = ".";
+        // allow Tomcat to load log4j2 and log with it
+        cp += File.pathSeparator + homePath.resolve("lib"); // resources (log4j2.xml, ...)
+        cp += File.pathSeparator + homePath.resolve("lib") + File.separator + "*"; // jars (log4j2-api-*.jar, ...)
         cp = addToClassPath(cp, "nxserver" + File.separator + "lib");
         cp = addToClassPath(cp, getBinJarName(binDir, ConfigurationGenerator.BOOTSTRAP_JAR_REGEX));
         // since Tomcat 7, we need tomcat-juli.jar for bootstrap as well
@@ -766,7 +753,7 @@ public class NuxeoLauncher {
         if (Files.notExists(classPathEntry)) {
             throw new RuntimeException("Tried to add nonexistent classpath entry: " + filename);
         }
-        cp += System.getProperty("path.separator") + classPathEntry;
+        cp += File.pathSeparator + classPathEntry;
         return cp;
     }
 
@@ -1087,8 +1074,8 @@ public class NuxeoLauncher {
                     EXIT_CODE_INVALID);
         }
         CommandSetInfo cset = launcher.connectBroker.getCommandSet();
-        if (launcher.xmlOutput && launcher.command.startsWith("mp-")) {
-            launcher.printXMLOutput(cset);
+        if (launcher.techPrinter != null && launcher.command.startsWith("mp-")) {
+            launcher.techPrinter.print(cset, System.out);
         }
         if (!commandSucceeded && !quiet || debug) {
             cset.log(commandSucceeded);
@@ -1199,13 +1186,12 @@ public class NuxeoLauncher {
      *             parameter read from stdin.
      * @since 8.3
      */
-    public ConnectProject promptProject(@NotNull List<ConnectProject> projects)
-            throws ConfigurationException, IOException {
+    public ConnectProject promptProject(@NotNull List<ConnectProject> projects) throws ConfigurationException {
         if (projects.isEmpty()) {
             throw new ConfigurationException("You don't have access to any project.");
         }
         if (projects.size() == 1) {
-            return projects.get(0);
+            return projects.getFirst();
         }
 
         String projectName;
@@ -1239,7 +1225,7 @@ public class NuxeoLauncher {
                     .forEach(project -> System.out.println("\t- " + project.getSymbolicName()));
             if (toIndex < projects.size()) {
                 int pageLeft = (projects.size() - i * PAGE_SIZE + PAGE_SIZE - 1) / PAGE_SIZE;
-                System.out.print(String.format("Project name (press Enter for next page; %d pages left): ", pageLeft));
+                System.out.printf("Project name (press Enter for next page; %d pages left): ", pageLeft);
             } else {
                 System.out.print("Project name: ");
             }
@@ -1321,7 +1307,7 @@ public class NuxeoLauncher {
         return true;
     }
 
-    protected boolean registerOffline() throws IOException, ConfigurationException {
+    protected boolean registerOffline() throws ConfigurationException {
         log.info("\nTo register your instance:");
         log.info("1. Visit {}/connect/registerInstance", ConnectUrlConfig::getBaseUrl);
         log.info(
@@ -1502,7 +1488,7 @@ public class NuxeoLauncher {
                     List<String> decryptedValues = askCryptoKeyAndDecrypt(crypto, value);
                     if (decryptedValues != null) {
                         raw = false;
-                        value = decryptedValues.get(0);
+                        value = decryptedValues.getFirst();
                     }
                 }
                 if (isRegexp) {
@@ -1517,7 +1503,7 @@ public class NuxeoLauncher {
     /**
      * @since 7.4
      */
-    protected void setConfigProperties() throws ConfigurationException, IOException, GeneralSecurityException {
+    protected void setConfigProperties() throws ConfigurationException, GeneralSecurityException {
         Crypto crypto = configurationGenerator.getCrypto();
         boolean doEncrypt = cmdLine.hasOption(OPTION_ENCRYPT);
         String algorithm = cmdLine.getOptionValue(OPTION_ENCRYPT);
@@ -1827,49 +1813,6 @@ public class NuxeoLauncher {
         }
     }
 
-    /**
-     * @since 5.6
-     */
-    protected void printXMLOutput(CommandSetInfo cset) {
-        try {
-            JAXBContext jaxbContext = JAXBContext.newInstance(CommandSetInfo.class, CommandInfo.class,
-                    PackageInfo.class, MessageInfo.class);
-            printXMLOutput(jaxbContext, cset, System.out);
-        } catch (JAXBException | XMLStreamException | FactoryConfigurationError e) {
-            throw new NuxeoLauncherException("Output serialization failed: " + e.getMessage(), EXIT_CODE_NOT_RUNNING,
-                    e);
-        }
-    }
-
-    /**
-     * @since 8.3
-     */
-    protected void printXMLOutput(JAXBContext context, Object object, OutputStream out)
-            throws XMLStreamException, FactoryConfigurationError, JAXBException {
-        XMLStreamWriter writer = jsonOutput ? jsonWriter(context, out) : xmlWriter(context, out);
-        Marshaller marshaller = context.createMarshaller();
-        marshaller.setProperty(Marshaller.JAXB_FORMATTED_OUTPUT, true);
-        if (jsonOutput) {
-            // replace the character escape handler as the one for XML doesn't correctly print newline in JSON
-            marshaller.setProperty("com.sun.xml.bind.characterEscapeHandler", MinimumEscapeHandler.theInstance);
-        }
-        marshaller.marshal(object, writer);
-    }
-
-    protected XMLStreamWriter jsonWriter(JAXBContext context, OutputStream out) {
-        JSONConfiguration config = JSONConfiguration.mapped()
-                                                    .rootUnwrapping(true)
-                                                    .attributeAsElement("key", "value")
-                                                    .build();
-        config = JSONConfiguration.createJSONConfigurationWithFormatted(config, true);
-        return JsonXmlStreamWriter.createWriter(new OutputStreamWriter(out), config, "");
-    }
-
-    protected XMLStreamWriter xmlWriter(JAXBContext context, OutputStream out)
-            throws XMLStreamException, FactoryConfigurationError {
-        return XMLOutputFactory.newInstance().createXMLStreamWriter(out);
-    }
-
     protected static class ShutdownHook extends Thread implements AutoCloseable {
 
         private final NuxeoLauncher launcher;
@@ -1992,7 +1935,9 @@ public class NuxeoLauncher {
 
     /**
      * Return process status (running or not) as String, depending on OS capability to manage processes. Set status
-     * value following "http://refspecs.freestandards.org/LSB_4.1.0/LSB-Core-generic/LSB-Core- generic/iniscrptact.html"
+     * value following
+     * <a href="http://refspecs.freestandards.org/LSB_4.1.0/LSB-Core-generic/LSB-Core-generic/iniscrptact.html">LSB Core
+     * generic</a>
      *
      * @see #getStatus()
      */
@@ -2068,10 +2013,9 @@ public class NuxeoLauncher {
         }
         // Output format
         if (cmdLine.hasOption(OPTION_XML)) {
-            setXMLOutput();
-        }
-        if (cmdLine.hasOption(OPTION_JSON)) {
-            setJSONOutput();
+            techPrinter = new NuxeoLauncherTechPrinter(NuxeoLauncherTechPrinter.Format.XML);
+        } else if (cmdLine.hasOption(OPTION_JSON)) {
+            techPrinter = new NuxeoLauncherTechPrinter(NuxeoLauncherTechPrinter.Format.JSON);
         }
         if (cmdLine.hasOption(OPTION_CLID)) {
             try {
@@ -2130,15 +2074,6 @@ public class NuxeoLauncher {
      */
     protected static void relaxStrict() {
         NuxeoLauncher.strict = false;
-    }
-
-    protected void setXMLOutput() {
-        xmlOutput = true;
-    }
-
-    protected void setJSONOutput() {
-        jsonOutput = true;
-        setXMLOutput();
     }
 
     public static void printShortHelp() {
@@ -2284,25 +2219,6 @@ public class NuxeoLauncher {
     /**
      * @since 5.6
      */
-    protected void printInstanceXMLOutput(InstanceInfo instance) {
-        try {
-            printInstanceXMLOutput(instance, System.out);
-        } catch (JAXBException | XMLStreamException | FactoryConfigurationError e) {
-            throw new NuxeoLauncherException("Output serialization failed: " + e.getMessage(), EXIT_CODE_NOT_RUNNING,
-                    e);
-        }
-    }
-
-    protected void printInstanceXMLOutput(InstanceInfo instance, OutputStream out)
-            throws JAXBException, XMLStreamException, FactoryConfigurationError {
-        JAXBContext jaxbContext = JAXBContext.newInstance(InstanceInfo.class, DistributionInfo.class, PackageInfo.class,
-                ConfigurationInfo.class, KeyValueInfo.class);
-        printXMLOutput(jaxbContext, instance, out);
-    }
-
-    /**
-     * @since 5.6
-     */
     protected void showConfig() {
         log.info("***** Nuxeo instance configuration *****");
         log.info("NUXEO_CONF: {}", info.NUXEO_CONF);
@@ -2343,14 +2259,14 @@ public class NuxeoLauncher {
             log.info("{}={}", keyval.key, keyval.value);
         }
         log.info("** Effective configuration for environment: {} and profiles: {}:",
-                () -> defaultString(System.getenv(ENV_NUXEO_ENVIRONMENT), "N/A"),
-                () -> defaultString(System.getenv(ENV_NUXEO_PROFILES), "N/A"));
+                () -> Objects.toString(System.getenv(ENV_NUXEO_ENVIRONMENT), "N/A"),
+                () -> Objects.toString(System.getenv(ENV_NUXEO_PROFILES), "N/A"));
         for (KeyValueInfo keyval : info.config.allkeyvals) {
             log.info("{}={}", keyval.key, keyval.value);
         }
         log.info("****************************************");
-        if (xmlOutput) {
-            printInstanceXMLOutput(info);
+        if (techPrinter != null) {
+            techPrinter.print(info, System.out);
         }
     }
 
